form button styles updated

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,35 @@
 }
 
 body {
-  background-image: url('b2.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: linear-gradient(120deg, #8d856d, #723d2e);
   color: white;
   font-family: 'Poppins', cursive;
   min-height: 100vh;
+}
+header {
+  font-size: 1.5rem;
+}
+header,
+form {
+  min-width: 20vh;
+  display: flex;
+  justify-content: center;
+}
+
+form input,
+form button {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  border: none;
+  background: white;
+}
+form button {
+  color: #723d2e;
+  background: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+form button :hover {
+  background: #723d2e;
+  color: white;
 }
