todo list  style updated

--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,7 @@ form button :hover {
   justify-content: center;
   align-items: center;
 }
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
