--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,12 @@ form button :hover {
   min-width: 30%;
   list-style: none;
 }
+.todo {
+  margin: 0.5rem;
+  background: #8d856d;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
