--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@
 }
 
 body {
-  background-image: linear-gradient(120deg, #8d856d, #723d2e);
+  background-image: linear-gradient(120deg, #8d856d, #ac6f5f);
   font-family: 'Poppins', cursive;
   min-height: 100vh;
 }
 header {
   font-size: 1.5rem;
+  padding: 0.5rem;
 }
 header,
 form {
@@ -24,7 +25,7 @@ form button {
   padding: 0.5rem;
   font-size: 1.5rem;
   border: none;
-  background: #969389;
+  background: white;
 }
 form button {
   color: #969389;
@@ -33,10 +34,11 @@ form button {
   transition: all 0.3s ease;
 }
 form button :hover {
-  background: #723d2e;
+  background: #7b2814;
   color: #8d856d;
 }
 .todo-container {
+  padding: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,9 +48,10 @@ form button :hover {
   list-style: none;
 }
 .todo {
-  margin: 0.5rem;
+  margin: 1rem;
   background: #969389;
   color: black;
+  font-weight: bold;
   font-size: 1.5rem;
   display: flex;
   justify-content: space-between;
@@ -67,5 +70,8 @@ form button :hover {
   font-size: 1.5rem;
 }
 .check-button {
-  color: #293e23;
+  color: #5c954e;
+}
+.todo-item {
+  padding: 0rem 1rem;
 }
