--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,12 @@ form button :hover {
 .todo-item {
   padding: 0rem 1rem;
 }
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
