--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,13 @@ form button :hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: all 0.5ms ease;
 }
 .todo li {
   flex: 1;
 }
-.trash-button,
-.check-button {
+.trash-btn,
+.done-btn {
   background: #723d2e;
   color: #969389;
   border: none;
@@ -69,18 +70,22 @@ form button :hover {
   cursor: pointer;
   font-size: 1.5rem;
 }
-.check-button {
+.done-btn {
   color: #5c954e;
 }
 .todo-item {
   padding: 0rem 1rem;
 }
-.fa-trash,
-.fa-check {
+.fa-trash-can,
+.fa-circle-check {
   pointer-events: none;
 }
 
 .completed {
   text-decoration: line-through;
   opacity: 0.5;
+}
+.fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
 }
